reconciliation-data-compare-v2: run vm params